2.0.15.android init