@@ -1,11 +1,8 @@
 package com.alibaba.fastjson2.util;
 
 import java.lang.invoke.*;
-import java.lang.management.ManagementFactory;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
-import java.nio.ByteOrder;
-import java.util.List;
 import java.util.function.*;
 
 public class JDKUtils {
@@ -21,21 +18,9 @@ public class JDKUtils {
     static final Class<?> CLASS_SQL_ROW_SET;
     public static final boolean HAS_SQL;
 
-    // Android not support
-    public static final Class CLASS_TRANSIENT;
-    public static final boolean BIG_ENDIAN;
-
     public static final boolean UNSAFE_SUPPORT;
 
-    // GraalVM not support
-    // Android not support
-    public static final BiFunction<char[], Boolean, String> STRING_CREATOR_JDK8;
-    public static final BiFunction<byte[], Byte, String> STRING_CREATOR_JDK11;
-    public static final ToIntFunction<String> STRING_CODER;
-    public static final Function<String, byte[]> STRING_VALUE;
-
     static {
-        boolean openj9 = false;
         int jvmVersion = -1;
         try {
             String property = System.getProperty("java.specification.version");
@@ -43,12 +28,6 @@ public class JDKUtils {
                 property = property.substring(2);
             }
             jvmVersion = Integer.parseInt(property);
-
-            String jmvName = System.getProperty("java.vm.name");
-            openj9 = jmvName.contains("OpenJ9");
-            if (openj9) {
-                FIELD_STRING_ERROR = true;
-            }
         } catch (Throwable ignored) {
         }
 
@@ -64,13 +43,6 @@ public class JDKUtils {
         CLASS_SQL_DATASOURCE = dataSourceClass;
         CLASS_SQL_ROW_SET = rowSetClass;
         HAS_SQL = hasJavaSql;
-
-        Class transientClass = null;
-        try {
-            transientClass = Class.forName("java.beans.Transient");
-        } catch (Throwable ignored) {
-        }
-        CLASS_TRANSIENT = transientClass;
 
         JVM_VERSION = jvmVersion;
 
@@ -102,129 +74,6 @@ public class JDKUtils {
             }
         }).test(null);
         UNSAFE_SUPPORT = unsafeSupport;
-
-        BIG_ENDIAN = ByteOrder.nativeOrder() == ByteOrder.BIG_ENDIAN;
-
-        BiFunction<char[], Boolean, String> stringCreatorJDK8 = null;
-        BiFunction<byte[], Byte, String> stringCreatorJDK11 = null;
-        ToIntFunction<String> stringCoder = null;
-        Function<String, byte[]> stringValue = null;
-
-        Boolean compact_strings = null;
-        try {
-            if (JVM_VERSION == 8) {
-                MethodHandles.Lookup lookup = getLookup();
-                MethodHandles.Lookup caller = lookup.in(String.class);
-
-                MethodHandle handle = caller.findConstructor(
-                        String.class, MethodType.methodType(void.class, char[].class, boolean.class)
-                );
-
-                CallSite callSite = LambdaMetafactory.metafactory(
-                        caller,
-                        "apply",
-                        MethodType.methodType(BiFunction.class),
-                        handle.type().generic(),
-                        handle,
-                        handle.type()
-                );
-                stringCreatorJDK8 = (BiFunction<char[], Boolean, String>) callSite.getTarget().invokeExact();
-            }
-
-            boolean lookupLambda;
-            if (JVM_VERSION > 8 && JVM_VERSION < 16 && !openj9) {
-                try {
-                    Field compact_strings_field = String.class.getDeclaredField("COMPACT_STRINGS");
-                    if (compact_strings_field != null) {
-                        compact_strings_field.setAccessible(true);
-                        compact_strings = (Boolean) compact_strings_field.get(null);
-                    }
-                } catch (Throwable ignored) {
-                    // ignored
-                }
-
-                lookupLambda = compact_strings != null && compact_strings.booleanValue();
-            } else {
-                List<String> inputArguments = ManagementFactory
-                        .getRuntimeMXBean()
-                        .getInputArguments();
-                lookupLambda = inputArguments.contains("--add-opens=java.base/java.lang.invoke=ALL-UNNAMED")
-                        || inputArguments.contains("--add-opens=java.base/java.lang.invoke=com.alibaba.fastjson2");
-                compact_strings = !inputArguments.contains("-XX:-CompactStrings");
-            }
-
-            if (lookupLambda) {
-                MethodHandles.Lookup lookup = getLookup();
-                MethodHandles.Lookup caller = lookup.in(String.class);
-                MethodHandle handle = caller.findConstructor(
-                        String.class, MethodType.methodType(void.class, byte[].class, byte.class)
-                );
-                CallSite callSite = LambdaMetafactory.metafactory(
-                        caller,
-                        "apply",
-                        MethodType.methodType(BiFunction.class),
-                        handle.type().generic(),
-                        handle,
-                        MethodType.methodType(String.class, byte[].class, Byte.class)
-                );
-                stringCreatorJDK11 = (BiFunction<byte[], Byte, String>) callSite.getTarget().invokeExact();
-
-                MethodHandles.Lookup stringCaller = lookup.in(String.class);
-
-                MethodHandle coder = stringCaller.findSpecial(
-                        String.class,
-                        "coder",
-                        MethodType.methodType(byte.class),
-                        String.class
-                );
-                CallSite applyAsInt = LambdaMetafactory.metafactory(
-                        stringCaller,
-                        "applyAsInt",
-                        MethodType.methodType(ToIntFunction.class),
-                        MethodType.methodType(int.class, Object.class),
-                        coder,
-                        coder.type()
-                );
-                stringCoder = (ToIntFunction<String>) applyAsInt.getTarget().invokeExact();
-
-                MethodHandle value = stringCaller.findSpecial(
-                        String.class,
-                        "value",
-                        MethodType.methodType(byte[].class),
-                        String.class
-                );
-                CallSite apply = LambdaMetafactory.metafactory(
-                        stringCaller,
-                        "apply",
-                        MethodType.methodType(Function.class),
-                        value.type().generic(),
-                        value,
-                        value.type()
-                );
-                stringValue = (Function<String, byte[]>) apply.getTarget().invokeExact();
-            }
-        } catch (Throwable ignored) {
-            // ignored
-        }
-
-        if (stringCreatorJDK11 == null
-                && unsafeSupport
-                && (compact_strings == null || compact_strings.booleanValue())
-                && !openj9
-        ) {
-            stringCreatorJDK11 = ((Supplier<BiFunction<byte[], Byte, String>>) () -> {
-                try {
-                    return (BiFunction<byte[], Byte, String>) new UnsafeUtils.UnsafeStringCreator();
-                } catch (Throwable e) {
-                    return null;
-                }
-            }).get();
-        }
-
-        STRING_CREATOR_JDK8 = stringCreatorJDK8;
-        STRING_CREATOR_JDK11 = stringCreatorJDK11;
-        STRING_CODER = stringCoder;
-        STRING_VALUE = stringValue;
     }
 
     public static boolean isSQLDataSourceOrRowSet(Class<?> type) {
@@ -232,19 +81,6 @@ public class JDKUtils {
                 || (CLASS_SQL_ROW_SET != null && CLASS_SQL_ROW_SET.isAssignableFrom(type));
     }
 
-    public static char[] getCharArray(String str) {
-        // GraalVM not support
-        // Android not support
-        if (!FIELD_STRING_ERROR) {
-            try {
-                return (char[]) UnsafeUtils.UNSAFE.getObject(str, FIELD_STRING_VALUE_OFFSET);
-            } catch (Exception ignored) {
-                FIELD_STRING_ERROR = true;
-            }
-        }
-
-        return str.toCharArray();
-    }
 //
 //    public static BiFunction<byte[], java.nio.charset.Charset, String> getStringCreatorJDK17() throws Throwable {
 //        MethodHandles.Lookup lookup = getLookup();
